--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>kobaltmusic</groupId>
+    <groupId>onegambler</groupId>
     <artifactId>xml-sensitive-data-remover</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -90,7 +90,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>com.kobaltmusic.dataremover.Main</mainClass>
+                            <mainClass>com.onegambler.dataremover.Main</mainClass>
                         </manifest>
                     </archive>
 
